--- a/illopintu/illopintu.csproj
+++ b/illopintu/illopintu.csproj
@@ -117,14 +117,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\illopinto.mdf" />
-    <Content Include="App_Data\illopinto_log.ldf">
-      <DependentUpon>illopinto.mdf</DependentUpon>
-    </Content>
     <Content Include="Global.asax" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
-    <Content Include="sql\sql.sql" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -149,6 +144,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Default\" />
   </ItemGroup>
