--- a/illopintu/illopintu.csproj
+++ b/illopintu/illopintu.csproj
@@ -130,7 +130,9 @@
     <Content Include="scripts\jquery-1.10.2.js" />
     <Content Include="scripts\jquery-1.10.2.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
+    <Content Include="textos\users.txt" />
     <Content Include="Web.config" />
+    <Content Include="Views\Game\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -164,9 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="textos\" />
     <Folder Include="Views\Default\" />
-    <Folder Include="Views\Game\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <PropertyGroup>
