--- a/illopintu/illopintu.csproj
+++ b/illopintu/illopintu.csproj
@@ -131,6 +131,7 @@
     <Content Include="scripts\jquery-1.10.2.js" />
     <Content Include="scripts\jquery-1.10.2.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
+    <Content Include="textos\chat.txt" />
     <Content Include="textos\users.txt" />
     <Content Include="Web.config" />
     <Content Include="Views\Game\Index.cshtml" />
