--- a/illopintu/illopintu.csproj
+++ b/illopintu/illopintu.csproj
@@ -119,6 +119,9 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\wan wan.gif" />
+    <Content Include="Content\Images\wancanvas.png" />
+    <Content Include="Content\Images\wanwan.png" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
