--- a/illopintu/illopintu.csproj
+++ b/illopintu/illopintu.csproj
@@ -135,6 +135,7 @@
     <Content Include="scripts\jquery-1.10.2.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
     <Content Include="textos\chat.txt" />
+    <Content Include="textos\Palabras.txt" />
     <Content Include="textos\users.txt" />
     <Content Include="Web.config" />
     <Content Include="Views\Game\Index.cshtml" />
@@ -148,6 +149,7 @@
     </Compile>
     <Compile Include="Models\Chat.cs" />
     <Compile Include="Models\Login.cs" />
+    <Compile Include="Models\Palabras.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
